Fix footer width on smaller screens

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -284,7 +284,7 @@ section.main {
 }
 
 footer {
-  width: 50%;
+  max-width: 48rem;
   margin: 0 auto;
   padding-top: 40px;
   padding-bottom: 30px;
